src/test/deca/context/invalid/created/minus_boolean.deca
//minus boolean is not defined
{
    -true;
}